# oatgrass

./: .gitignore  config.toml.default  oatgrass.py  pyproject.toml  pytest.ini  requirements.txt
oatgrass/: __init__.py  __version__.py  api_verification.py  cli.py  config.py  logger.py  rate_limits.py  test_api_verification.py  test_cli_ui_helpers.py  test_logger.py  test_tracker_auth.py  test_tracker_profile.py  tracker_auth.py  tracker_profile.py
oatgrass/profile/: ARCHITECTURE.md  CACHE_RULES.md  __init__.py  menu_service.py  profile_search.py  retriever.py  search_service.py  session_state.py  test_cli_handlers.py  test_menu_service.py  test_retriever.py  test_search_service.py  test_session_state.py  test_tracker_selection.py  tracker_selection.py
oatgrass/profile/fixtures/: malformed_user_torrents.json  null_payload_user_torrents.json  ops_user_torrents.json  red_user_torrents.json
oatgrass/search/: basic_mode.py  discogs_service.py  edition_aware_mode.py  edition_comparison.py  edition_display.py  edition_matcher.py  edition_parser.py  formatters.py  gazelle_client.py  group_search.py  parsers.py  protocols.py  resilience.py  search_coordinator.py  search_mode.py  test_gazelle_download.py  test_rate_limits.py  test_search_mode_tiers.py  test_tier_search_service.py  test_wait_logging.py  tier_search_service.py  types.py  upload_candidates.py  url_utils.py
