[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oatgrass"
version = "0.1.0"
description = "Oatgrass - feed the gazelles"
readme = "docs/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Oatgrass Contributors" }
]
dependencies = [
  "rich>=13.0.0",
  "aiohttp>=3.8.0",
  "pydantic>=2.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
oatgrass = "oatgrass.cli:main"
